feat: Add Tailwind CSS integration with custom styles and configuration

--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Opossum's Digital Terrarium</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -27,7 +26,9 @@
     .pixelated {
       image-rendering: pixelated;
       image-rendering: -moz-crisp-edges;
+      image-rendering: -webkit-optimize-contrast;
       image-rendering: crisp-edges;
+      image-rendering: optimize-contrast;
     }
 
     /* Animation for Modal - if JSX style tag doesn't work in all environments */
